Full CRUD for posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+  <%=link_to "All Posts", posts_path%> | <%=link_to "Create A Post", new_post_path%> 
     <%= yield %>
   </body>
 </html>
