partial form  changes to syntax

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 
 </br>
 
-<%= render 'shared/errors', object: @post %>
+<%= render partial: 'shared/errors', locals: {object: @post}%>
 
 <%= render 'form'%>
 
