--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Create a New Post </h1>
 
-<%= render 'shared/errors', object: @post %>
+<%= render partial: 'shared/errors', locals: {object: @post}%>
 
 <%= render 'form'%>
