--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,18 @@
   </head>
 
   <body>
-  <%=link_to "All Posts", posts_path%> | <%=link_to "Create A Post", new_post_path%> 
+  <%=link_to "All Posts", posts_path%> | <%=link_to "Create A Post", new_post_path%>  
+  
+    <% if session[:user_id].nil? %>
+      <%= link_to "Login", login_path%>
+    <%else%>
+      <h3>Logged In: <%= current_user.username %></h3>
+    <%end%>
+
+    <h1>PinCurls</h1>
+  
+  
     <%= yield %>
+    <%=link_to "Logout", logout_path%>
   </body>
 </html>
