--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1> All Posts </h1> 
 
 <% @posts.each do |post|%>
-<p><%=link_to "#{post.title}", post_path(post)%></p></br>
+<p><%=link_to "#{post.title}", post_path(post)%></p>
 <%end%>
 
