--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
   </head>
 
   <body>
-  <%=link_to "All Posts", posts_path%> | <%=link_to "Create A Post", new_post_path%>  
+  <%=link_to "All Posts", posts_path%> | <%=link_to "Create A Post", new_post_path%> |  
   
     <% if session[:user_id].nil? %>
       <%= link_to "Login", login_path%>
-    <%else%>
+      
+    <%else%> 
       <h3>Logged In: <%= current_user.username %></h3>
     <%end%>
 
