--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,13 @@
 
 <h2><%=@post.content%></h2>
 
+
+    <%@post.tags.each do |t|%>
+    <%= t.name %>
+    <%end%>
+
+
+
 <h3><%= link_to "Edit Post", edit_post_path(@post) %></h3>
 
 <h3><%= link_to "Delete", post_path(@post), :method => "delete"%></h>
