--- a/app/views/application/user_homepage.html.erb
+++ b/app/views/application/user_homepage.html.erb
@@ -1,5 +1,10 @@
-<h1>All Posts</h1>
+<h1>Welcome, <%=current_user.name%></h1>
+
 <% @posts.each do |post|%>
 <p><%=link_to "#{post.title}", post_path(post)%></p>
 <%end%>
+
+
+
+
 
