--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,13 +2,18 @@
 
 <h2><%=@post.content%></h2>
 
+    <ul>
+        <%@post.tags.each do |t|%>
+            <li>  <%=link_to t.name, tag_path(t) %> </li> 
+        <%end%>
+    </ul>
+    
+    
 
-    <%@post.tags.each do |t|%>
-    <%= t.name %>
-    <%end%>
 
 
+<%= link_to "Edit Post", edit_post_path(@post) %> |
 
-<h3><%= link_to "Edit Post", edit_post_path(@post) %></h3>
+<%= link_to "Delete", post_path(@post), :method => "delete"%> |
 
-<h3><%= link_to "Delete", post_path(@post), :method => "delete"%></h>
+<%=link_to "Back to Home", '/'%>
