--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,6 +5,10 @@
 <%=f.label :content, "Content"%></br>
 <%=f.text_area :content%></br>
 
+<%=f.label :img, "Image"%></br>
+<%=f.text_field :img%></br>
+
+
 <%#=f.collection_select :tag_id, Tag.all,  :id, :name %>
 
 <h5>Add A Hashtag: </h5>
