--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,4 @@
-<h1>Sign Up</h1>
 
+<h1>Edit <% @user.name %>'s Profile</h1>
 <%= render partial: "/shared/errors", locals: {object: @user} %>
-<%= render "user_form" %>
-
-
-
+<%= render "user_form"%>
