--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,20 @@
 <h1><%=@post.title%></h1>
 
+<%=image_tag @post.img%>
+
 <h2><%=@post.content%></h2>
 
-    <ul>
+    <h4></h4>
         <%@post.tags.each do |t|%>
-            <li>  <%=link_to t.name, tag_path(t) %> </li> 
-        <%end%>
-    </ul>
+        <%= link_to "#{t.name}", tag_path(t)%>     
+        <%end%> </br>
+    </h4>
+
+        </br>
+        
+        </br>
+        </br>
+    
     
     
 
