--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,9 +19,11 @@
     
 
 
+<% if current_user.id == @post.user_id %>
+    <%= link_to "Edit Post", edit_post_path(@post) %> |
 
-<%= link_to "Edit Post", edit_post_path(@post) %> |
+    <%= link_to "Delete", post_path(@post), :method => "delete"%> 
 
-<%= link_to "Delete", post_path(@post), :method => "delete"%> |
+<% end %></br>
 
 <%=link_to "Back to Home", '/'%>
