--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,41 @@
   </head>
 
   <body>
-  <%=link_to "Home", '/' %> | <%=link_to "Create A Post", new_post_path%> 
-  <hr>
-    <% if session[:user_id].nil? %>
-      <%= link_to "Login", login_path%>
+
+      <% if notice %>
+      	    <%= notice %>
+	    <% end %>
+	
+	    <% if alert %>
+      	    <%= alert %>
+	    <% end %>
+    
+    <%=link_to "Home", '/' %> 
+
+    <hr>
+
+      <% if current_user %>
+        <%=link_to "Create A Post", new_post_path%> | <%=link_to "My Profile", user_path(current_user.id)%>
+        <hr>
+        <h4>Logged In: <%= current_user.username %></h4>
       
-    <%else%>
-      <h4>Logged In: <%= current_user.username %></h4>
-      <h4><%=link_to "My Profile", user_path(current_user.id)%></h4>
-    <%end%>
 
+      <%else%>
+         <%= link_to "Login", login_path%>
+
+      <%end%>
+
+      <h1>PinCurls</h1>
+      <hr>
+
+    
+      <%= yield %>
      
-    <h1>PinCurls</h1>
-    <hr>
-  
-    <%= yield %>
-    <hr>
-    <% if session[:user_id] %>
-    <%=link_to "Logout", logout_path%> 
+      <hr>
+      <% if session[:user_id] %>
+      <%=link_to "Logout", logout_path%> 
 
-    <%end%>
+      <%end%>
 
   </body>
 </html>
