--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,6 +5,8 @@
 <%=f.label :content, "Content"%></br>
 <%=f.text_area :content%></br>
 
+<%=f.hidden_field :user_id, :value => current_user.id%>
+
 <%=f.label :img, "Image"%></br>
 <%=f.text_field :img%></br>
 
@@ -25,3 +27,4 @@
 <%=f.submit%>
 
 <%end%>
+
