--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,12 +18,12 @@
     
     
 
-
-<% if current_user.id == @post.user_id %>
+       
+<% if current_user && current_user.id == @post.user_id %>
+   
     <%= link_to "Edit Post", edit_post_path(@post) %> |
 
-    <%= link_to "Delete", post_path(@post), :method => "delete"%> 
-
-<% end %></br>
+    <%= link_to "Delete", post_path(@post), :method => "delete"%> |
+<%end%>
 
 <%=link_to "Back to Home", '/'%>
