--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,19 @@
 <h1>All Posts</h1>
+ <div class = "alert">
+     <%=flash["alert"]%>
+ </div>
+
 <ul>
     <% @posts.each do |post|%>
         <li> <%= link_to post.title, post_path(post)%> 
             <p><%=image_tag post.img%></p>
+            <p><%=form_for @favorite do |f|%>
+                <%=f.hidden_field :post_id, :value => post.id %>
+                <%=f.hidden_field :user_id, :value => current_user.id %> 
+            </p>
+            <%=f.submit "Pin"%> 
+            <%end %> 
+               
         </li> 
     <%end%>
 </ul>
