--- a/app/views/application/user_homepage.html.erb
+++ b/app/views/application/user_homepage.html.erb
@@ -1,14 +1,17 @@
-<h1>Welcome, <%=current_user.name%></h1>
 
-<ul>
+
+<h1>Welcome, <%=current_user.name%></h1>
+<div class="align">
+
+
     <% @posts.each do |post|%>
 
-        <li><%=link_to post.title, post_path(post)%></li>
+        <%=link_to post.title, post_path(post)%>
         <p><%=image_tag post.img%></p>
 
     <%end%>
-</ul>
 
+</div>
 
 
 
