--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
    
 </head>
 
+
   <body>
    <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
         <a class="navbar-brand" href="#">Pincurls</a>
@@ -29,6 +30,10 @@
         <a class="nav-link" href='/'>Home </a>
       </li>
      </nav>
+    
+
+
+
 
       <% if notice %>
       	    <%= notice %>
@@ -48,16 +53,16 @@
       
 
       <%else%>
-         <%= link_to "Login", login_path%>
+        <div class="jumbotron">
+          <h1 class="display-4">Hey, CurlFriends!</h1>
+          <p>PinCurls is a site all about embracing your natural!</p>
+          <a class="btn btn-primary btn-lg" href="/login" role="button">Login</a>
+     </div>
 
       <%end%>
-
-      <h1>PinCurls</h1>
-      <hr>
-
-    
+      
       <%= yield %>
-     
+    
       <hr>
       <% if session[:user_id] %>
       <%=link_to "Logout", logout_path%> 
