--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,32 @@
-<%=form_for @post do |f|%>
-<%=f.label :title, "Title"%></br>
-<%=f.text_field :title%></br>
-</br>
-<%=f.label :content, "Content"%></br>
-<%=f.text_area :content%></br>
 
-<%=f.hidden_field :user_id, :value => current_user.id%>
+  <div class="container">
+    <div class="jumbotron">
+      <%=form_for @post do |f|%>
+        <%=f.label :title, "Title"%></br>
+        <%=f.text_field :title%></br>
+        </br>
+        <%=f.label :content, "Content"%></br>
+        <%=f.text_area :content%></br>
 
-<%=f.label :img, "Image"%></br>
-<%=f.text_field :img%></br>
+        <%=f.hidden_field :user_id, :value => current_user.id%>
 
+        <%=f.label :img, "Image"%></br>
+        <%=f.text_field :img%></br>
 
-<%#=f.collection_select :tag_id, Tag.all,  :id, :name %>
+        </br>
 
-<h5>Add A Hashtag: </h5>
-<ul>
-  <% @tags.each do |tag| %>
-      <li>
-        <%= check_box_tag 'post[tag_ids][]', tag.id -%>
-        <%= h tag.name -%>
-      </li>
-  <% end %>
-</ul>
+        <h5>Add A Hashtag: </h5>
 
+          <% @tags.each do |tag| %>
+            
+                <%= check_box_tag 'post[tag_ids][]', tag.id -%>
+                <%= h tag.name -%></br>
+            
+          <% end %></br>
 
-<%=f.submit%>
+        <%=f.submit%>
 
-<%end%>
+      <%end%>
+    </div>
+</div>
 
