--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,7 @@
+<div class= "align">
+        <h1>Create a New Post </h1>
 
-<h1>Create a New Post </h1>
+            <%= render partial: 'shared/errors', locals: {object: @post}%>
 
-<%= render partial: 'shared/errors', locals: {object: @post}%>
-
-<%= render 'form'%>
+            <%= render 'form'%>
+</div>
