--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-
-<h1>Edit <% @user.name %>'s Profile</h1>
+<div class="align">
+<h1>Edit Profile</h1>
 <%= render partial: "/shared/errors", locals: {object: @user} %>
 <%= render "user_form"%>
+</div>
