--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,43 @@
 
+
 <h3>Name: <%= @user.name %> </h3>
 <h3>Username: <%= @user.username %> </h3>
 
 <%=image_tag @user.img%></br>
 <%= link_to "Edit Profile", edit_user_path%>
 
+
+</br>
+
+<%=link_to "Delete Account", user_path(@user), :method => :delete%> </br>
+
+
+
+<div class= "align">
+
+
 <h2>My Favorite Posts: </h2>
 
-<ul></ul>
  <% @user.favorites.each do |f| %>
-    <li><%=link_to f.post.title, post_path(f.post)%> <br>
+    <%=link_to f.post.title, post_path(f.post)%> <br>
         <%=image_tag f.post.img %>
-    </li>
+    
     <%end%>
-</ul>
+
+
 
 
 <% if !current_user.posts.empty? %>
     <h2>My Posts: </h2>
-    <ul>
+    
       
         <% current_user.posts.each do |p| %>
-        <li><%=link_to p.title, post_path(p)%> <br>
+       <%=link_to p.title, post_path(p)%> <br>
             <%=image_tag p.img %>
-        </li>
+        
         <%end%>
-    </ul>
+    
 <%end%>
 
- <%=link_to "Delete Account", user_path(@user), :method => :delete%>
 
- <%=link_to "Back", '/'%>
-
+</div>
