--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,10 @@
  *= require_self
  */
 
- .jumbotron {
-    color: rgba(0 159 147 0.4);
-  }
+ 
+.jumbotron {
+    background-color:rgba(255, 238, 88, 0.4)
+}
 
  .align{
     text-align: center;
@@ -30,11 +31,14 @@
  .myimage{
     max-width:100%;
     max-height: 100%;
+
+   
     }
 
 .imgdiv{
     height: 200px;
     overflow: hidden;
+   
 }
 
 .title {
