--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,12 @@
+<div class="align">
+
 <h1><%=@post.title%></h1>
 
 <%=image_tag @post.img%>
 
-<h2><%=@post.content%></h2>
+<p><h5><%=@post.content%></h5></p>
 
-    <h4></h4>
+    <h4>
         <%@post.tags.each do |t|%>
         <%= link_to "#{t.name}", tag_path(t)%>     
         <%end%> </br>
@@ -27,3 +29,5 @@
 <%end%>
 
 <%=link_to "Back to Home", '/'%>
+
+</div>
